# musicgen-template

./: .gitignore  README.md  pyproject.toml
scripts/: generate_music.py  init_music_project.py
